--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Edit meta tags for SEO -->
     <title>Chloe Dumit</title>
-
+  <link rel="icon" href="http://sstatic.net/stackoverflow/img/favicon.ico" />
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
     
